<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quero Pizza</string>
    <string name="action_settings">Settings</string>
    <string name="mt_pizza">Monte sua Pizza!</string>
    <string name="email">E-mail</string>
    <string name="tel">Telefone</string>
    <string name="sou_cliente">Se você já é nosso Cliente.</string>
    <string name="nao_cliente">Se você ainda não é nosso Cliente.</string>
    <string name="senha">Senha</string>
    <string name="bt_entrar">Entrar</string>
    <string name="bt_cadastrar">Cadastre-se</string>
    <string name="cadastro">Efetue seu cadastro abaixo!</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="confsenha">Confirma Senha</string>
    <string name="bt_salvar">Salvar</string>
    <string name="bt_ok">OK</string>
    <string name="escolha">Escolha seus ingredientes abaixo!</string>
    <string name="cb_calabresa">Calabresa</string>
    <string name="cb_frango">Frango</string>
    <string name="cb_catupiry">Catupiry</string>
    <string name="cb_cebola">Cebola</string>
    <string name="cb_chocolate">Chocolate</string>
    <string name="cb_amendoim">Amendoim</string>
    <string name="cb_banana">Banana</string>
    <string name="cb_cheddar">Cheddar</string>
    <string name="cb_bacon">Bacon</string>
    <string name="pos_escolha">Após a(s) escolha(s), clique no botão OK para finalizar seu pedido.</string>

</resources>
