<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CompraActivity" >

    <TextView
        android:id="@+id/escolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/escolha"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="27sp" />

    <Button
        android:id="@+id/btok"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mtpizza"
        android:text="@string/bt_ok" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mtpizza"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp" >

            <CheckBox
                android:id="@+id/cb01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_calabresa" />

            <CheckBox
                android:id="@+id/cb02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_frango" />

            <CheckBox
                android:id="@+id/cb03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_catupiry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp" >

            <CheckBox
                android:id="@+id/cb04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_cebola" />

            <CheckBox
                android:id="@+id/cb05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_chocolate" />

            <CheckBox
                android:id="@+id/cb06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_amendoim" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp" >

            <CheckBox
                android:id="@+id/cb07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_banana" />

            <CheckBox
                android:id="@+id/cb08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_cheddar" />

            <CheckBox
                android:id="@+id/cb09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_bacon" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/pos_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btok"
        android:layout_alignLeft="@+id/btok"
        android:text="@string/pos_escolha"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

</RelativeLayout>