<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.queropizza.queropizza.PrincipalActivity" >

    <TextView
        android:id="@+id/mtpizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/mt_pizza"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mtpizza"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/soucliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sou_cliente"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rbtemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <RadioButton
                android:id="@+id/rbttel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tel" />
        </LinearLayout>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btentrar"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_entrar" />

    <TextView
        android:id="@+id/nao_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mtpizza"
        android:layout_below="@+id/btentrar"
        android:layout_marginTop="59dp"
        android:text="@string/nao_cliente"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nao_cliente"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/bt_cadastrar" />

</RelativeLayout>