<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.queropizza.queropizza.PrincipalActivity" >

    <TextView
        android:id="@+id/mtpizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cadastro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="27sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mtpizza"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
        </LinearLayout>

        <TextView
            android:id="@+id/tvnome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etnome"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/tvtelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/ettelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/tvendereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etendereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/tvsenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvconfsenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confsenha"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etconfsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btcadastrar"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mtpizza"
        android:text="@string/bt_salvar" />

</RelativeLayout>